# DevDocs

./: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  justfile
backend/: pyproject.toml
fast-markdown-mcp/: mcp-server-cfg.example.json  pyproject.toml
fast-markdown-mcp/src/fast_markdown_mcp/: server.py
