[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crawl4ai>=0.4.2",
    "fastapi>=0.104.0",
    "httpx>=0.25.0",
    "nest-asyncio>=1.5.8",
    "pydantic>=2.4.2",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "uvicorn>=0.24.0",
]
